--- a/references.bib
+++ b/references.bib
@@ -16,3 +16,20 @@ articleno = {193},
 numpages = {25},
 keywords = {Type-aware operator mutation, SMT solvers, Fuzz testing}
 }
+
+@inproceedings{ftrs,
+  author    = {Melli\`{e}s, Paul-Andr\'{e} and Zeilberger, Noam},
+  title     = {Functors Are Type Refinement Systems},
+  year      = {2015},
+  isbn      = {9781450333009},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/2676726.2676970},
+  doi       = {10.1145/2676726.2676970},
+  booktitle = {Proceedings of the 42nd Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
+  pages     = {3–16},
+  numpages  = {14},
+  keywords  = {refinement types, category theory, type theory},
+  location  = {Mumbai, India},
+  series    = {POPL '15}
+}
